WEBGL versie, met day/night/seasons cycle. Somewhat overcomplicated

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,4 +2,10 @@ main {
   background-color: blue;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
+p {
+  font-family: 'Roboto', sans-serif;
+}
+
 /*# sourceMappingURL=style.css.map */
